--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Discord Bot Created using Discord.js",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint bot.js",
+    "start": "node bot.js",
+    "dev": "npm run lint && npm run start"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,14 @@
   "dependencies": {
     "bufferutil": "^3.0.4",
     "discord.js": "^11.3.2",
-    "erlpack": "github:hammerandchisel/erlpack"
+    "erlpack": "github:discordapp/erlpack"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0"
   }
 }
