--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "homepage": "https://github.com/risingjason/discord-bot-nodejs#readme",
   "dependencies": {
     "bufferutil": "^3.0.4",
-    "discord.js": "^11.3.2",
-    "erlpack": "github:discordapp/erlpack"
+    "discord.js": "^11.3.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
