--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/risingjason/discord-bot-nodejs#readme",
   "dependencies": {
     "bufferutil": "^3.0.4",
-    "discord.js": "^11.3.2"
+    "discord.js": "^11.3.2",
+    "superagent": "^3.8.3"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
