--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-    "extends": "standard"
+    "extends": "google",
+    "parser": "babel-eslint",
+    "parserOptions": {
+        "ecmaVersion": 7
+    },
+    "rules": {
+        "max-len": 0,
+        "require-jsdoc": 0
+    }
 }
