--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint bot.js",
-    "start": "nodemon bot.js",
+    "start": "nodemon src/bot.js",
     "dev": "npm run lint && npm run start"
   },
   "repository": {
